new Paragraph added

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>This is html file</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi mollitia porro numquam. Accusamus expedita architecto, nobis aut vero nihil ipsa odit ut totam delectus, dolorum ex? Dolores omnis doloribus nihil fugiat quam illum similique?</p>
 </body>
 </html>
